# Astar

./: .gitignore
pallets/xc-asset-config/: Cargo.toml
primitives/: Cargo.toml
