[package]
name = "astar-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# third-party dependencies
log = { version = "0.4.17", default-features = false }

# Substrate dependencies
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.41" }

# XCM dependencies
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41" }

# Astar pallets
pallet-xc-asset-config = { workspace = true }

[features]
default = ["std"]
std = [
	"log/std",
	"frame-support/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"pallet-xc-asset-config/std",
]
runtime-benchmarks = ["xcm-builder/runtime-benchmarks"]
